--- a/AgTest/AgTest/AgTest.csproj
+++ b/AgTest/AgTest/AgTest.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="ExcelDataReader.DataSet" Version="3.6.0" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.46" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
     <PackageReference Include="Mock" Version="1.0.0" />
     <PackageReference Include="Moq" Version="4.18.2" />
